--- a/index.html
+++ b/index.html
@@ -19,25 +19,31 @@
       <br/>
       <hr/>
       <br/>
-      
+
+      <h3 style="color: gray">Spring, 2022</h3>
+      <p>
+        信息论, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/huazhongyun">Zhongyun Hua</a>.&ensp;
+        <a href="sources/info/信息论.pdf">[note]</a>
+      </p>
+
       <h3 style="color: gray">Spring, 2021</h3>
       <p>
-        计算方法, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/yangyunyun">Yunyun Yang</a>:&ensp;
+        计算方法, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/yangyunyun">Yunyun Yang</a>.&ensp;
         <a href="sources/nume/计算方法思维导图.pdf">[mindmap]</a>
       </p>
       <p>
-        数理逻辑, HITsz, lectured by Shijun Ren:&ensp;
+        数理逻辑, HITsz, lectured by Shijun Ren.&ensp;
         <a href="sources/logic/数理逻辑题型一览.pdf">[note]</a>
       </p>
       
       <h3 style="color: gray">Fall, 2020</h3>
       <p>
-        概率论与数理统计, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/ouyangshunxiang">Shunxiang Ouyang</a>:&ensp;
+        概率论与数理统计, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/ouyangshunxiang">Shunxiang Ouyang</a>.&ensp;
         <a href="sources/prob/概率论与数理统计.pdf">[note]</a>
         <a href="sources/prob/常见随机变量.pdf">[common r.v.]</a>
       </p>
       <p>
-        算法设计与分析, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/hezhenyu">Zhenyu He</a>:&ensp;
+        算法设计与分析, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/hezhenyu">Zhenyu He</a>.&ensp;
         <a href="sources/algo/算法设计与分析证明集合.pdf">[note]</a>
       </p>
 
