--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Yifeng Xu">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
@@ -24,6 +24,12 @@
       <p>
         信息论, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/huazhongyun">Zhongyun Hua</a>.&ensp;
         <a href="sources/info/信息论.pdf">[note]</a>
+      </p>
+
+      <h3 style="color: gray">Fall, 2021</h3>
+      <p>
+        密码学基础, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/jianglin">Lin Jiang</a>.&ensp;
+        <a href="sources/cryp/密码学基础.pdf">[note]</a>
       </p>
 
       <h3 style="color: gray">Spring, 2021</h3>
