--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
         <a href="sources/algo/算法设计与分析证明集合.pdf">[note]</a>
       </p>
 
+      <h3 style="color: gray">Fall, 2019</h3>
+      <p>
+        集合论与图论, HITsz, lectured by <a href="https://faculty.hitsz.edu.cn/tanglinlin">Linlin Tang</a>.&ensp;
+        <a href="sources/setg/集合论与图论定理总结.pdf">[note]</a>
+        <a href="sources/setg/图论思维导图.pdf">[mindmap]</a>
+      </p>
+
     </div>
   </body>
 </html>
